--- a/deployment.yaml
+++ b/deployment.yaml
@@ -6,7 +6,7 @@ metadata:
     app.kubernetes.io/instance: cicd-demo-instance
     app.kubernetes.io/version: '1.0.0'
     app.kubernetes.io/managed-by: kubectl
-  name: mgma_pqla-cicd-deployment
+  name: mgma-pqla-cicd-deployment
 spec:
   replicas: 1
   selector:
@@ -18,7 +18,7 @@ spec:
         app: cicd-demo
     spec:
       containers:
-        - image: 211711023937.dkr.ecr.us-east-2.amazonaws.com/demo-cesarschool:latest
+        - image: 211711023937.dkr.ecr.us-east-2.amazonaws.com/dp003:latest
           imagePullPolicy: Always
           name: cicd-demo
           ports:
