--- a/service.yaml
+++ b/service.yaml
@@ -7,11 +7,11 @@ metadata:
     app.kubernetes.io/version: "1.0.0"
     app.kubernetes.io/component: backend
     app.kubernetes.io/managed-by: kubectl
-  name: cicd-demo
+  name: mgma-pqla-cicd
 spec:
   selector:
     app: cicd-demo
   ports:
    -  protocol: TCP
-      port: 8080
+      port: 8082
       targetPort: 3000
